fix(pagination): another alternate way to fix scrollbar issue for pagination (#6258)

--- a/packages/components/src/components/pagination/_pagination.scss
+++ b/packages/components/src/components/pagination/_pagination.scss
@@ -15,6 +15,7 @@ $css--helpers: true;
 @import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
 @import '../select/select';
 @import '../text-input/text-input';
+@import '../button/button';
 
 /// Pagination styles
 /// @access private
@@ -28,19 +29,22 @@ $css--helpers: true;
     @include reset;
     @include type-style('body-short-01');
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     background-color: $ui-01;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-top: 1px solid $ui-03;
-    height: rem(48px);
+    min-height: rem(48px);
+
+    @include carbon--breakpoint('md') {
+      overflow: initial;
+    }
   }
 
   .#{$prefix}--pagination .#{$prefix}--select {
     height: 100%;
     align-items: center;
-    grid-template-columns: auto 0;
   }
 
   .#{$prefix}--pagination .#{$prefix}--select-input--inline__wrapper {
@@ -52,7 +56,7 @@ $css--helpers: true;
     @include type-style('body-short-01');
     width: auto;
     min-width: auto;
-    height: 100%;
+    height: rem(48px);
     padding: 0 2.25rem 0 $spacing-05;
   }
 
@@ -80,7 +84,7 @@ $css--helpers: true;
   .#{$prefix}--pagination__left,
   .#{$prefix}--pagination__right {
     display: flex;
-    height: 100%;
+    height: rem(48px);
     align-items: center;
   }
 
@@ -161,37 +165,6 @@ $css--helpers: true;
     fill: $disabled-02;
     background: $ui-01;
     border-color: $ui-03;
-  }
-
-  .#{$prefix}--pagination--inline {
-    height: rem(42px);
-    margin-top: -0.5rem;
-    margin-bottom: -0.5rem;
-    margin-right: -1rem;
-  }
-
-  .#{$prefix}--pagination--inline .#{$prefix}--pagination__button,
-  .#{$prefix}--pagination--inline
-    .#{$prefix}--btn--ghost.#{$prefix}--pagination__button {
-    height: rem(40px);
-    border-left: 1px solid $ui-03;
-    border-right: 1px solid $ui-03;
-    margin: 0;
-  }
-
-  .#{$prefix}--pagination--inline .#{$prefix}--pagination__button--forward,
-  .#{$prefix}--pagination--inline
-    .#{$prefix}--btn--ghost.#{$prefix}--pagination__button--forward {
-    border-right: 0;
-    padding: 0 $carbon--spacing-05;
-    margin-left: $carbon--spacing-05;
-  }
-
-  .#{$prefix}--pagination--inline .#{$prefix}--pagination__button--backward,
-  .#{$prefix}--pagination--inline
-    .#{$prefix}--btn--ghost.#{$prefix}--pagination__button--backward {
-    margin: 0 $carbon--spacing-05;
-    padding: 0 $carbon--spacing-05;
   }
 
   // Skeleton state
